--- a/package.json
+++ b/package.json
@@ -4,22 +4,29 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "ios": "react-native run-ios --simulator='iPhone 11 Pro Max'",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "install-ios": "cd ios && pod install",
+    "clean:android": "cd android && ./gradlew clean && cd ../"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.16.0",
     "@reduxjs/toolkit": "^1.6.0",
     "react": "17.0.1",
     "react-native": "0.64.2",
-    "react-redux": "^7.2.4"
+    "react-native-get-random-values": "^1.7.2",
+    "react-redux": "^7.2.4",
+    "redux-persist": "^6.0.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
     "@babel/runtime": "^7.14.0",
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^27.0.2",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.28.0",
     "jest": "^27.0.4",
     "metro-react-native-babel-preset": "^0.66.0",
