--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.16.0",
     "@reduxjs/toolkit": "^1.6.0",
+    "appcenter": "4.4.3",
+    "appcenter-analytics": "4.4.3",
+    "appcenter-crashes": "4.4.3",
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-native-get-random-values": "^1.7.2",
